# agent-loggy

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  context_rules.csv  docker-compose.yml  main.py  meta_postgres_sql.txt  mkdocs.yml  orchestrator.py  pyproject.toml  requirements.txt
.github/workflows/: docs-ci.yml  docs-deploy.yml
agents/: analyze_agent.py  file_searcher.py  parameter_agent.py  planning_agent.py  report_writer.py  verify_agent.py
alembic/: env.py
alembic/versions/: 1b671ff38c8c_initial_schema.py  add_app_settings.py  add_context_rules.py  add_eval_tables.py  add_knowledge_base.py  add_projects.py  add_prompts_versioned.py  seed_initial_prompts.py  setup_database.sql  update_parameter_extraction_prompt.py
app/: config.py  dependencies.py  main.py  orchestrator.py  startup.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  LLM_CACHING_LITELLM_PARITY_PLAN.md  LLM_CACHING_REVIEW.md  README.md  db-config-migration-plan.md  db-config-migration-todo.md  index.md  memory.md  project_enhancement_plans.md  rag-implementation-plan.md  schema-setup-guide.md  session.md  specs.md
portable-db-access/: .env.example  .gitignore  README.md
schemas/: ChatResponse.py  StreamRequest.py  __init__.py
scripts/: build_agent_docs.py  check_docs_fresh.py  create_schema.py  drop_schema.py  export_ai_pack.py  seed_projects.py  seed_prompts.py  seed_settings.py  verify_schema.py
tests/: test_trace_id_extractor.py
tools/: full_log_finder.py  log_searcher.py  trace_id_extractor.py
trace_outputs/: trace_b4ac2069-bfd5-47cf-9e87-8e97518b9242.txt
(+97 files in other folders)
