[project]
name = "agent-loggy"
version = "0.1.0"
description = "Automated log analysis and verification for banking/financial logs using LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "pydantic",
    "pydantic-settings",
    "requests",
    "python-dateutil",
    "regex",
    "alembic",
    "psycopg2-binary",
    "python-dotenv",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
